Single And Multiple Images Get For Root Folder

--- a/JSLLite/JSLLite.csproj
+++ b/JSLLite/JSLLite.csproj
@@ -265,6 +265,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Images\Category\" />
+    <Folder Include="Images\Items\" />
+    <Folder Include="Images\Products\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
