--- a/JSLLite/Web.config
+++ b/JSLLite/Web.config
@@ -35,6 +35,7 @@
     <add key="SUserName" value="sa" />
     <add key="SPassword" value="Excellent#9499@" />
     <add key="CompCode" value="Comp0222" />
+	<add key="Img_Folder" value="/Images/Categorys/"/>
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
